--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini Chat</title>
+    <title>工业大模型交互终端</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="background-animation"></div>
     <div class="chat-container">
         <div class="chat-header">
-            <h2>Gemini Pro Chat</h2>
+            <div class="header-title">
+                <h1>工业大模型交互终端</h1>
+                <p>Industrial AI Interface</p>
+            </div>
+            <div class="system-status">
+                <span class="status-light"></span>
+                <span>SYSTEM ONLINE</span>
+            </div>
         </div>
         <div class="chat-box" id="chat-box">
-            <!-- 消息会在这里显示 -->
+            <!-- 消息会在这里动态生成 -->
         </div>
         <div class="chat-input-area">
             <form id="chat-form">
-                <input type="text" id="user-input" placeholder="输入你的消息..." autocomplete="off">
-                <button type="submit" id="send-btn">发送</button>
+                <div class="input-wrapper">
+                    <input type="text" id="user-input" placeholder="输入指令或问题..." autocomplete="off">
+                    <div class="input-glow"></div>
+                </div>
+                <button type="submit" id="send-btn" title="发送指令">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="24" height="24">
+                        <path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" />
+                    </svg>
+                </button>
             </form>
         </div>
     </div>
