--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,14 @@
             </form>
         </div>
     </div>
+
+        <!-- 1. 引入 DOMPurify 来确保安全 -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.0.6/dist/purify.min.js"></script>
+    
+    <!-- 2. 引入 marked.js 来解析 Markdown -->
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    
+    <!-- 3. 最后引入你自己的脚本 -->
     <script src="script.js"></script>
 </body>
 </html>
