--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="system-status">
                 <span class="status-light"></span>
-                <span>作者：史芳宁</span>
+                <span>随时随地为您服务</span>
             </div>
         </div>
         <div class="chat-box" id="chat-box">
